@@ -246,10 +246,11 @@ namespace MySql.Data.MySqlClient
 			ER_TABLEACCESS_DENIED_ERROR 1142
 			ER_COLUMNACCESS_DENIED_ERROR 1143
 			ER_ILLEGAL_GRANT_FOR_TABLE 1144
-			ER_GRANT_WRONG_HOST_OR_USER 1145
-			ER_NO_SUCH_TABLE 1146
-			ER_NONEXISTING_TABLE_GRANT 1147
-			ER_NOT_ALLOWED_COMMAND 1148
+			ER_GRANT_WRONG_HOST_OR_USER 1145 */
+        NoSuchTable = 1146,
+        NonExistingTableGrant = 1147,
+
+/*			ER_NOT_ALLOWED_COMMAND 1148
 			ER_SYNTAX_ERROR 1149
 			ER_DELAYED_CANT_CHANGE_LOCK 1150
 			ER_TOO_MANY_DELAYED_THREADS 1151
