@@ -15,6 +15,8 @@ Version 5.2.3
   connection string.  This way we isolate it just to our particular command.  
   This may fix bug #37104    
 - Fixed documentation surrounding use of ? vs @ for parameters (bug #37349)
+- Reduced network traffic for the normal case where the web provider schema is up
+  to date (bug #37469)
 
 Version 5.2.2 - 
 - Fixed profile provider that would throw an exception if you were updating
